apps/k8s/knarr/flock/flock.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flock
  namespace: knarr
  labels:
    app: flock
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flock
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: flock
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      containers:
      - name: jellyfin
        image: lscr.io/linuxserver/jellyfin:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8096
          name: http
        volumeMounts:
        - name: config
          mountPath: /config
        - name: media
          mountPath: /media
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: flock-config-pvc
      - name: media
        persistentVolumeClaim:
          claimName: media-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: flock
  namespace: knarr
spec:
  selector:
    app: flock
  ports:
  - port: 80
    targetPort: 8096
    name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flock-ingress
  namespace: knarr
  annotations:
    kubernetes.io/ingress.class: traefik
    external-dns.alpha.kubernetes.io/target: "14dba35c-b082-4cf5-8319-05b87f07357c.cfargotunnel.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Flock"
    gethomepage.dev/group: "Media"
    gethomepage.dev/icon: "jellyfin.png"
    gethomepage.dev/description: "Block programming & commercials"
spec:
  rules:
  - host: flock.yggdrasil.rip
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flock
            port:
              number: 80
